--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ encoding_rs = "0.8"
 fast-float2 = "0.2"
 zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
 quick-xml = { version = "0.38", features = ["encoding"] }
+strum = { version = "0.26", features = ["derive"] }
 
 # Optional dependencies.
 chrono = { version = "0.4", features = ["serde"], optional = true, default-features = false }
